--- a/lap2_basicHTML/lap2_basicHTML.html
+++ b/lap2_basicHTML/lap2_basicHTML.html
@@ -85,13 +85,12 @@
        </table>  
 	   <hr width="77%" align="left"/>
 	   <h2> References </h2> 
-	   <table>
-	    <tr>
-		 <td width="90px"> <a href="https://en.wikipedia.org/wiki/HTML" target="_blank"> wikipedia </a> </td>
-		 <td align="center" width="90px"> <a target="_blank" href="https://www.washington.edu/accesscomputing/webd2/student/unit1/module3/html_history.html"> washington.edu </a> </td>
-		 <td align="right" width="90px"> <a target="_blank" href="https://turbofuture.com/computers/What-is-HTML5_"> turbofuture </a> </td>
-		</tr>
-	  </table> 
+	   <nav>
+		 <a href="https://en.wikipedia.org/wiki/HTML" target="_blank"> wikipedia </a> |
+		 <a target="_blank" href="https://www.washington.edu/accesscomputing/webd2/student/unit1/module3/html_history.html"> washington.edu </a> |
+		 <a target="_blank" href="https://turbofuture.com/computers/What-is-HTML5_"> turbofuture </a> 
+	  </nav>	
+	  
 	   
       </body>
 </html>
